# cem

./: .gitignore  AI.hs  Analysis.hs  CEM.hs  DBUtils.hs  IO.hs  LC.hs  Main.hs  Makefile  README.md  State.hs  Syscall.hs  Utils.hs  VM.hs  ZFA.hs  cem.cabal  compare.sh
doc/: abstract.md
doc/icfp2013/: cactus-environent.tex  paper.md
examples/: Makefile  add.lc  all.lc  caps.lc  capsinteract.lc  cat.lc  charval.lc  cohendiv.lc  compose.lc  concatMap.lc  digits-of-e1.lc  digits-of-e2.lc  double.lc  efficient.lc  env.lc  eq.lc  eqplus.lc  error.lc  exec.lc  exp3.lc  expexp.lc  fact.lc  factfib.lc  fannkuch.lc  fib.lc  filter.lc  flat.lc  for.lc  forever.lc  fork.lc  forkmore.lc  from.lc  generate.lc  getEnv.lc  hello-unicode.lc  ifthenelse.lc  join.lc  lines.lc  lookup.lc  ls.lc  (+28 more)
examples/church/: exp-true.lc  exp3_8.lc  expexp.lc  fib.lc  pow-true.lc  primes.lc  sum.lc
examples/noprelude/: Makefile  ack.lcp  and.lc  appendsum.lc  cfa2id.lc  div.lcp  fact.lc  factfact.lc  factfib.lc  factfibmut.lc  fib.lc  gcd.lc  gt.lc  hello.lc  icfp2014.lc  id.lc  intro_pushdown.lc  io1.lc  lazyexample.lc  lcm.lc  le.lcp  length.lc  malloc.lc  mallocThenWrite.lc  mult.lcp  mutualrec.lc  nats.lc  queens.lc  read.lc  recurse.lc  reverse.lc  simpleshare.lc  sub.lc  sum.lc  sys_exit.lc  twice.lc  write.lc
examples/pure/: dcfa.lc  exp-false.lc  exp-true.lc  lte-false.lc  sub-false.lc  twoY.lc
lib/: church.lc  os.lc  prelude.lc
native/: arm.s  gc-x64.s  x64.s
test/: .dataCon.lc.swp  Makefile  Y.lc  add.lc  add.lcp  add2.lcp  all.lc  append.lc  both.lc  caps.lc  caps.lcp  capsfast.lcp  capsinteract.lc  cat.lc  charval.lc  cohendiv.lc  compose.lc  concat.lc  concatMap.lc  dataCon.lc  digits-of-e1.lc  digits-of-e2.lc  div.lc  double.lc  double.lcp  efficient.lc  env.lc  eq.lc  eqplus.lc  error.lc  exitcall.lc  exp-false.lc  exp-true.lc  exp3.lc  exp3_8.lc  fact-false.lc  fact-true.lc  fact.lc  fact.lcp  factfib.lc  (+77 more)
test/church/: div.lc  exp-true.lc  exp3_8.lc  expexp.lc  fact.lc  fannkuch.lc  fib.lc  id.lc  iszero.lc  lte.lc  mod.lc  pow-true.lc  pow.lc  primes.lc  queens.lc  sum.lc  tak-true.lc  tak.lc
test/hs/: Church.hi  Church.hs  Makefile  Y.hi  Y.hs  exp-false.hi  exp-false.hs  exp-true.hi  exp-true.hs  fact-true.hi  fact-true.hs  fib.hs  tak-false.hs
test/noprelude/: ack.lcp  double.lcp  fact.lc  fib.lc  gcd.lc  gt.lc  hello.lc  hello.lcp  icfp2014.lc  io.lcp  lazyexample.lc  lcm.lc  loop.lc  mutualrec.lc  nats.lc  putStr.lc  queens.lc  read.lcp  readwrite.lcp
test/pure/: exp-true.lc  nats.lc
vm/: cem.c  cem.h  trace.c
