name: cem
version: 0.1
cabal-version: >=1.10
build-type: Simple
license: GPL-2
copyright: (c) 2014 George Stelle
author: George Stelle <stelleg@gmail.com>
maintainer: George Stelle <stelleg@gmail.com>
category: Compilers
synopsis: A simple lambda calculus compiler built on the Cactus Environment Machine.
extra-source-files:
  README.md
  Makefile
  examples/gcd.lc
  examples/pure/lte-false.lc
  examples/pure/ones.lc
  examples/pure/exp-false.lc
  examples/pure/unused.lc
  examples/pure/plus-true.lc
  examples/pure/exp-true.lc
  examples/pure/exp-many-false.lc
  examples/pure/iszero-true.lc
  examples/pure/twoY.lc
  examples/pure/iszero-false.lc
  examples/pure/sub-false.lc
  examples/pure/nats.lc
  examples/pure/dcfa.lc
  examples/pure/mult-false.lc
  examples/lookup.lc
  examples/from.lc
  examples/words.lc
  examples/parseperf.lc
  examples/charval.lc
  examples/substring.lc
  examples/hello-unicode.lc
  examples/append.lc
  examples/fannkuch.lc
  examples/lines.lc
  examples/digits-of-e2.lc
  examples/isSpace.lc
  examples/tac.lc
  examples/fork.lc
  examples/printCharInts.lc
  examples/church/pow.lc
  examples/church/iszero.lc
  examples/church/fannkuch.lc
  examples/church/id.lc
  examples/church/primes.lc
  examples/church/tak.lc
  examples/church/fact.lc
  examples/church/fib.lc
  examples/church/exp-true.lc
  examples/church/exp3_8.lc
  examples/church/div.lc
  examples/church/lte.lc
  examples/church/sum.lc
  examples/church/pow-true.lc
  examples/church/mod.lc
  examples/church/expexp.lc
  examples/church/queens.lc
  examples/noprelude/lazyexample.lc
  examples/noprelude/gcd.lc
  examples/noprelude/cfa2id.lc
  examples/noprelude/gt.lc
  examples/noprelude/recurse.lc
  examples/noprelude/read.lc
  examples/noprelude/and.lc
  examples/noprelude/id.lc
  examples/noprelude/factfib.lc
  examples/noprelude/lcm.lc
  examples/noprelude/icfp2014.lc
  examples/noprelude/twice.lc
  examples/noprelude/mutualrec.lc
  examples/noprelude/mallocThenWrite.lc
  examples/noprelude/fact.lc
  examples/noprelude/reverse.lc
  examples/noprelude/fib.lc
  examples/noprelude/factfact.lc
  examples/noprelude/write.lc
  examples/noprelude/length.lc
  examples/noprelude/sys_exit.lc
  examples/noprelude/sub.lc
  examples/noprelude/malloc.lc
  examples/noprelude/loop.lc
  examples/noprelude/simpleshare.lc
  examples/noprelude/putStr.lc
  examples/noprelude/intro_pushdown.lc
  examples/noprelude/nats.lc
  examples/noprelude/factfibmut.lc
  examples/noprelude/sum.lc
  examples/noprelude/appendsum.lc
  examples/noprelude/hello.lc
  examples/path.lc
  examples/factfib.lc
  examples/writeFile.lc
  examples/lcm.lc
  examples/zipWith.lc
  examples/primes.lc
  examples/putStrLn.lc
  examples/ls.lc
  examples/printi.lc
  examples/take.lc
  examples/cat.lc
  examples/plus-true.lc
  examples/error.lc
  examples/tak.lc
  examples/tuple.lc
  examples/splitWhen.lc
  examples/split.lc
  examples/mutualrec.lc
  examples/concat.lc
  examples/fact.lc
  examples/printf.lc
  examples/eq.lc
  examples/pair.lc
  examples/le.lc
  examples/generate.lc
  examples/fib.lc
  examples/double.lc
  examples/readFile.lc
  examples/add.lc
  examples/sleep.lc
  examples/length.lc
  examples/sys_exit.lc
  examples/sub.lc
  examples/foldr.lc
  examples/primeBitParity.lc
  examples/string.lc
  examples/transpose.lc
  examples/compose.lc
  examples/shell.lc
  examples/forever.lc
  examples/mapm.lc
  examples/getLine.lc
  examples/signum.lc
  examples/caps.lc
  examples/forkmore.lc
  examples/putStr.lc
  examples/getEnv.lc
  examples/sort.lc
  examples/pid.lc
  examples/takeWhile.lc
  examples/sqrt.lc
  examples/concatMap.lc
  examples/noteq.lc
  examples/div.lc
  examples/join.lc
  examples/eqplus.lc
  examples/exp3.lc
  examples/seive.lc
  examples/all.lc
  examples/capsinteract.lc
  examples/cohendiv.lc
  examples/digits-of-e1.lc
  examples/system.lc
  examples/for.lc
  examples/efficient.lc
  examples/interact.lc
  examples/sum.lc
  examples/hello.lc
  examples/mod.lc
  examples/expexp.lc
  examples/range.lc
  examples/ifthenelse.lc
  examples/queens.lc
  examples/filter.lc

data-files:
  native/x64.s
  native/gc-x64.s
  lib/prelude.lc
  lib/os.lc
  lib/church.lc

source-repository head
  type:     git
  location: git://stell.es/cem.git

executable cem
  main-is: Main.hs
  ghc-options: -O2 -dynamic
  default-extensions: LambdaCase TupleSections
  other-modules: Paths_cem AI Analysis CEM DBUtils IO LC State Syscall Utils VM ZFA
  build-depends: process,
                 base >= 4.6.0.1,
                 graphviz >= 2999.16.0.0,
                 parsec >= 3.1.5,
                 containers,
                 mtl,
                 bytestring,
                 text,
                 array
  buildable: True
  default-language: Haskell2010
